--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ authors = ["Poker Demo"]
 [dependencies]
 slint = "1.14"
 rand = "0.8"
+wasm-bindgen = "0.2"
 
 [build-dependencies]
 slint-build = "1.14"
+
+[lib]
+name = "slint_poker"
+crate-type = ["rlib", "cdylib"]
 
 [profile.release]
 opt-level = "s"
