--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,13 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Poker Demo"]
 
+[[bin]]
+name = "slint-poker"
+path = "src/main.rs"
+
 [dependencies]
 slint = "1.14"
 rand = "0.8"
-wasm-bindgen = "0.2"
 
 [build-dependencies]
 slint-build = "1.14"
-
-[lib]
-name = "slint_poker"
-crate-type = ["rlib", "cdylib"]
-
-[profile.release]
-opt-level = "s"
