Add real poker hand evaluation and improved bot AI
- Implement complete poker hand evaluation (straight, flush, full house, etc.)
- Add HandRank enum with proper hand rankings
- Evaluate 7 cards (2 hole + 5 community) for accurate showdown
- Improve bot AI with hand strength-based decision making
- Strong hands: aggressive betting (70-80% raise frequency)
- Medium hands: balanced play (50-60% action)
- Weak hands: cautious play with folding
- Wrap eprintln in DEBUG_MODE check
- Add error handling for window.run()
- Update Cargo.toml with caret versions for dependency safety

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,8 @@ name = "slint-poker"
 path = "src/main.rs"
 
 [dependencies]
-slint = "1.14"
-rand = "0.8"
+slint = "^1.14"
+rand = "^0.8"
 
 [build-dependencies]
-slint-build = "1.14"
+slint-build = "^1.14"
